More mobile friendly... with zurb and a viewport callout...maybe fix flicker nav

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@
 
 $grayMediumLight: #eaeaea;
 
+{
+  -webkit-backface-visibility: hidden;
+}
+
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
